# RisQ

./: .gitignore  LICENSE  LICENSE.md  README.md  config_types.py  train.py
TFM/: README.md  pyproject.toml
TFM/configs/: config.yaml
TFM/configs/model/: TabPFN.yaml  XGBoost.yaml
TFM/configs/paths/: example.yaml
TFM/configs/vars_to_keep/inference/: ehr_plus_blood_urine_biomarkers.txt  ehr_plus_disease_history.txt  ehr_plus_local_environment.txt  ehr_plus_medications.txt  ehr_plus_physical_measures_including_eye_measures.txt  ehr_plus_questionnaire_including_verbal_interview.txt  ehr_plus_routine_blood_panel.txt
TFM/configs/vars_to_keep/modality_groups/: blood_urine_biomarkers_only.txt  disease_history_only.txt  ehr_only.txt  local_environment_only.txt  medications_only.txt  questionnaire_including_verbal_interview_only.txt  routine_blood_panel_only.txt
TFM/dataset/: RepQueryDataset.py  utils.py
TFM/models/: RepQuery.py  TabPFN.py  TransformerUtils.py  integrated_gradients.py  utils.py
configs/model/: RepQuery.yaml
configs/vars_to_keep/inference/: ehr_plus_genetics.txt
configs/vars_to_keep/modality_groups/: genetics_only.txt  physical_measures_including_eye_measures_only.txt
infra/: utils.py
models/: Transformers.py  XGBoost.py
