[project]
name = "tfm"
version = "0.1.0"
description = "RisQ: a patient representation model trained on UK Biobank data that predicts onset of hundreds of diseases simultaneously"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata==0.10.6",
    "catboost==1.2.7",
    "databind==4.5.2",
    "ehrdata[vitessce]>=0.0.2a1",
    "einops==0.8.0",
    "fastparquet==2024.2.0",
    "h5py==3.10.0",
    "hydra-core==1.3.2",
    "icd10-cm>=0.0.5",
    "ipykernel==6.29.5",
    "joblib==1.4.2",
    "jupyter==1.1.1",
    "jupyterlab>=4.3.8",
    "leidenalg>=0.11.0",
    "lifelines>=0.28.0",
    "matplotlib==3.9.0",
    "notebook==7.3.1",
    "numpy==1.24.4",
    "omegaconf==2.3.0",
    "openai>=1.105.0",
    "optuna==3.6.0",
    "pandas==1.5.3",
    "plotly==5.24.1",
    "psutil==6.1.0",
    "pyarrow==14.0.2",
    "pycox>=0.3.0",
    "pydantic-settings>=2.10.1",
    "pytorch-lightning==2.3.0",
    "rtdl-num-embeddings==0.0.10",
    "rtdl-revisiting-models==0.0.2",
    "safetensors==0.4.3",
    "scfates>=1.1.1",
    "schedulefree==1.2.7",
    "scikit-learn==1.5.1",
    "scikit-survival>=0.23.1",
    "scipy==1.12.0",
    "seaborn==0.13.2",
    "sentence-transformers==3.3.1",
    "skrub==0.4.1",
    "tabicl>=0.1.3",
    "tabpfn==2.0.0",
    "tensorstore>=0.1.45",
    "torch==2.2.2",
    "torch-geometric==2.6.1",
    "torch-scatter>=2.1.2",
    "torchmetrics==1.4.0.post0",
    "torchtuples>=0.2.2",
    "torchvision>=0.17.2",
    "tqdm==4.66.4",
    "transformers==4.56",
    "umap-learn>=0.5.7",
    "wandb==0.17.7",
    "xgboost==2.1.1",
]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
